hphp/hack/test/typecheck/lambda/lambda_legacy/lambda_two_uses.php.exp
File "lambda_two_uses.php", line 15, characters 15-16:
Was expecting an object but type is unknown (Typing[4297])
  File "lambda_two_uses.php", line 15, characters 8-9:
  It is unknown because a type could not be determined here
